0.50 -> 0.51
	- added newtFormSetTimer() (and test case, and python)

0.40 -> 0.50
	- added CheckboxTree widget
	- vastly improved python bindings

0.30 -> 0.40
        - GPM mouse support added

0.30 -> 0.31:
	- pgdn could core dump on short textboxes

0.25 -> 0.30:
	- newtDrawRootText() didn't use the specified position properly
	- removed relics of original listbox code still handing around
	  checkbox.c
	- renamed DOBORDER flag to simply BORDER
	- listboxes no longer scroll by default
	- newtListboxSetEntry() uses a key, not an index
	- listbox scrollbars should work properly in borders